[gd_scene load_steps=8 format=3 uid="uid://cwhxddsw2bs6w"]

[ext_resource type="Script" path="res://scenes/stages/stage.gd" id="1_4xw1w"]
[ext_resource type="PackedScene" uid="uid://71x1nvfggm0l" path="res://scenes/grid_map_dungeon.tscn" id="2_p1smc"]
[ext_resource type="Script" path="res://node_types/enemy_spawner.gd" id="3_vvg36"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_heig4"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_fd4fg"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_qoosi"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_p5tk3"]

[node name="Stage" type="Node3D"]
script = ExtResource("1_4xw1w")

[node name="GridMap" parent="." instance=ExtResource("2_p1smc")]

[node name="WorldBorder" type="StaticBody3D" parent="."]
collision_mask = 0

[node name="LeftWall" type="CollisionShape3D" parent="WorldBorder"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 9.19194)
shape = SubResource("WorldBoundaryShape3D_heig4")

[node name="RightWall" type="CollisionShape3D" parent="WorldBorder"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 24, -2.62268e-07, 8)
shape = SubResource("WorldBoundaryShape3D_fd4fg")

[node name="TopWall" type="CollisionShape3D" parent="WorldBorder"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 16, 0, 0)
shape = SubResource("WorldBoundaryShape3D_qoosi")

[node name="BottomWall" type="CollisionShape3D" parent="WorldBorder"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 12, -2.18557e-07, 14)
shape = SubResource("WorldBoundaryShape3D_p5tk3")

[node name="PlayerSpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 13)

[node name="Enemies" type="Node3D" parent="."]

[node name="EnemySpawner" type="Marker3D" parent="Enemies"]
transform = Transform3D(0.734003, 0, 0.679147, 0, 1, 0, -0.679147, 0, 0.734003, 5.96478, 0, 6.68439)
gizmo_extents = 1.0
script = ExtResource("3_vvg36")
enemy_type = 2
spawn_on_ready = null

[node name="EnemySpawner2" type="Marker3D" parent="Enemies"]
transform = Transform3D(0.576903, 0, -0.816813, 0, 1, 0, 0.816813, 0, 0.576903, 17.7156, 0, 7.19138)
gizmo_extents = 1.0
script = ExtResource("3_vvg36")
enemy_type = 1
spawn_on_ready = null
